modifikasi styles.css

--- a/rabu27825css/index.html
+++ b/rabu27825css/index.html
@@ -20,6 +20,7 @@
 <body>
     <!-- css inline -->
     <h3 style="font-size: 50px;">Aku suka ngoding!</h3>
+    bebas
     <table border="1">
         <thead>
             <tr>
@@ -41,5 +42,6 @@
             </tr>
         </tbody>
     </table>
+    fokus hey
 </body>
 </html>
