update flex.html and styles.css with new menu and channel layout; add initial YouTube directory structure

--- a/rabu3925flex/flex.html
+++ b/rabu3925flex/flex.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div id="kotakMerah"></div>
-        <div id="kotakKuning"></div>
-        <div id="kotakHijau"></div>
+      <div id="kotakMerah"></div>
+      <div id="kotakKuning"></div>
+      <div id="kotakHijau"></div>
     </div>
 
-</body>
+    <!-- teks ke pinggir -->
+    <div class="menu">
+      <a href="">All</a>
+      <a href="">Image</a>
+      <a href="">Image</a>
+    </div>
+    <div class="channel">
+      <img src="hasilFlex.png" alt="" class="foto" />
+      <div>
+        <h3 id="teksChannel">SMKN 1 Rongga</h3>
+        <h3>@smkjingga</h3>
+      </div>
+    </div>
+  </body>
 </html>
